--- a/placar.qsf
+++ b/placar.qsf
@@ -48,6 +48,6 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
 set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name VERILOG_FILE somador1bt.v
-set_global_assignment -name VERILOG_FILE somador7bts.v
 set_global_assignment -name VERILOG_FILE btnsEntrada.v
 set_global_assignment -name VERILOG_FILE Entradas_soma.v
+set_global_assignment -name VERILOG_FILE somador_subitrator7bts.v
