--- a/placar.qsf
+++ b/placar.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM570T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY btnsEntrada
+set_global_assignment -name TOP_LEVEL_ENTITY somador1bt
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:04:13  APRIL 04, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -51,3 +51,5 @@ set_global_assignment -name VERILOG_FILE somador1bt.v
 set_global_assignment -name VERILOG_FILE btnsEntrada.v
 set_global_assignment -name VERILOG_FILE Entradas_soma.v
 set_global_assignment -name VERILOG_FILE somador_subitrator7bts.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE btnsEntradasTest.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE somador1btTest.vwf
