--- a/placar.qsf
+++ b/placar.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM570T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY decodificadorDisplay7Segmentos
+set_global_assignment -name TOP_LEVEL_ENTITY somador_subtrator7bts
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:04:13  APRIL 04, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
