--- a/placar.qsf
+++ b/placar.qsf
@@ -57,3 +57,4 @@ set_global_assignment -name VERILOG_FILE decodificadorDisplay7Segmentos.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE somadorSubtrator.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE decodificadorDisplay7Segmentos.vwf
 set_global_assignment -name VERILOG_FILE comparador.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE comparadorTest.vwf
