--- a/placar.qsf
+++ b/placar.qsf
@@ -58,3 +58,4 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE somadorSubtrator.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE decodificadorDisplay7Segmentos.vwf
 set_global_assignment -name VERILOG_FILE comparador.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE comparadorTest.vwf
+set_global_assignment -name VERILOG_FILE compararMais99.v
