--- a/placar.qsf
+++ b/placar.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM240T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY somadorSubtrator7bts
+set_global_assignment -name TOP_LEVEL_ENTITY comparadorDeMagnitude
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:11:51  APRIL 09, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -50,3 +50,5 @@ set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name VERILOG_FILE somador1bt.v
 set_global_assignment -name VERILOG_FILE btnsEntrada.v
 set_global_assignment -name VERILOG_FILE somadorSubtrator7bts.v
+set_global_assignment -name VERILOG_FILE comparadorDeMagnitude.v
+set_global_assignment -name VERILOG_FILE conversorBinarioBcd.v
