--- a/placar.qsf
+++ b/placar.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM240T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY main
+set_global_assignment -name TOP_LEVEL_ENTITY somador1bt
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:11:51  APRIL 09, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -58,3 +58,4 @@ set_global_assignment -name VERILOG_FILE mux16pra4.v
 set_global_assignment -name VERILOG_FILE retornar8.v
 set_global_assignment -name VERILOG_FILE main.v
 set_global_assignment -name VERILOG_FILE mudarOrdem.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE somador1btTest.vwf
