--- a/placar.qsf
+++ b/placar.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM240T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY decod7segs
+set_global_assignment -name TOP_LEVEL_ENTITY conversorBinarioBcd
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:11:51  APRIL 09, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -61,3 +61,4 @@ set_global_assignment -name VERILOG_FILE mudarOrdem.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE somador1btsTest.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE somadorSubtratorTest.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE decod7segs.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE ConversorBinarioBcdTest.vwf
