--- a/placar.qsf
+++ b/placar.qsf
@@ -64,3 +64,28 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE decod7segs.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE ConversorBinarioBcdTest.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE mux8x4Teste.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE btnEntradaTeste.vwf
+set_location_assignment PIN_44 -to cBotoes[0]
+set_location_assignment PIN_48 -to cBotoes[1]
+set_location_assignment PIN_50 -to cBotoes[2]
+set_location_assignment PIN_52 -to chaveTime
+set_location_assignment PIN_42 -to nSimulacao[6]
+set_location_assignment PIN_39 -to display[0]
+set_location_assignment PIN_33 -to nSimulacao[0]
+set_location_assignment PIN_30 -to nSimulacao[1]
+set_location_assignment PIN_34 -to nSimulacao[2]
+set_location_assignment PIN_36 -to nSimulacao[3]
+set_location_assignment PIN_38 -to nSimulacao[4]
+set_location_assignment PIN_40 -to nSimulacao[5]
+set_location_assignment PIN_35 -to chaveNP
+set_location_assignment PIN_37 -to escolhaDisplay[0]
+set_location_assignment PIN_68 -to escolhaDisplay[1]
+set_location_assignment PIN_66 -to escolhaDisplay[2]
+set_location_assignment PIN_88 -to escolhaDisplay[3]
+set_location_assignment PIN_92 -to display[1]
+set_location_assignment PIN_100 -to display[2]
+set_location_assignment PIN_98 -to display[3]
+set_location_assignment PIN_41 -to display[4]
+set_location_assignment PIN_70 -to display[5]
+set_location_assignment PIN_90 -to display[6]
+set_location_assignment PIN_12 -to clock
+set_global_assignment -name VECTOR_WAVEFORM_FILE testeTotal.vwf
