--- a/placar.qsf
+++ b/placar.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM240T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY clockDivider
+set_global_assignment -name TOP_LEVEL_ENTITY controleCronometro
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:11:51  APRIL 09, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -94,3 +94,7 @@ set_global_assignment -name VERILOG_FILE clockDivider.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE clockDivider.vwf
 set_global_assignment -name VERILOG_FILE cronometroRegressivo.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE cronometroRegressivo.vwf
+set_global_assignment -name VERILOG_FILE clockDivider50mhzTo1hz.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE clockDivider50mhzTo1hz.vwf
+set_global_assignment -name VERILOG_FILE controleCronometro.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE controleCronometro.vwf
