--- a/ProjetoFinal/placar.qsf
+++ b/ProjetoFinal/placar.qsf
@@ -48,6 +48,10 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
 set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name VERILOG_FILE registradorParalelo8bit.v
+set_global_assignment -name VERILOG_FILE muxEscolherDig.v
+set_global_assignment -name VERILOG_FILE decod7segs.v
+set_global_assignment -name VERILOG_FILE conversorBinarioBcd.v
 set_global_assignment -name VERILOG_FILE main.v
 set_global_assignment -name VERILOG_FILE cronometroRegressivo24.v
 set_global_assignment -name VERILOG_FILE cronometroRegressivo14.v
