--- a/ProjetoPlacarDigital/placarDigital.qsf
+++ b/ProjetoPlacarDigital/placarDigital.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM240T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY cronometroRegressivo
+set_global_assignment -name TOP_LEVEL_ENTITY cronometroRegressivoEsquematico
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "01:49:46  MAY 20, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -65,3 +65,4 @@ set_global_assignment -name VERILOG_FILE botoesDeEntrada.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
 set_global_assignment -name VERILOG_FILE cronometroRegressivo.v
 set_global_assignment -name VECTOR_WAVEFORM_FILE cronometroRegressivo.vwf
+set_global_assignment -name BDF_FILE cronometroRegressivoEsquematico.bdf
